--- a/client/src/App.css
+++ b/client/src/App.css
@@ -372,6 +372,34 @@ label {
    margin-left: 8vw;*/
         width: 90vw;
     }
+   .homeInfoContainer {
+      margin-top: 10px;
+   }
+   .lgText{
+      font-size: 20px;
+      padding-left: 0 10px;
+      line-height: 30px;
+   }
+
+   #heyhey{
+      background-color: rgba(157, 157, 157, 0.00);
+      border: 1px solid rgba(255, 255, 255, 0);
+      box-shadow: 0 2px 2px 0 rgba(0,0,0,0.0), 0 1px 5px 0 rgba(0,0,0,0.0), 0 3px 1px -2px rgba(0,0,0,0);
+      /*display: flex;*/
+   }
+
+   .frontDiv {
+      width: 50%;
+   }
+
+   .imgRow{
+      display: flex;
+   }
+
+   .arrow{
+      justify-content: center;
+   }
+
     .componentTitle {
         color: #111;
         font-family: 'Helvetica Neue', sans-serif;
